# qtspeech

./: .cmake.conf  .gitignore  .qmake.conf  CMakeLists.txt  dependencies.yaml  groups  project.config  qtspeech.pro  sync.profile
cmake/: FindFlite.cmake  FindSpeechDispatcher.cmake
config.tests/flite/: flite.cpp  flite.pro
config.tests/voconhybrid/: voconhybrid.cpp  voconhybrid.pro
examples/: CMakeLists.txt  examples.pro
examples/speech/: CMakeLists.txt  speech.pro
src/: CMakeLists.txt  src.pro
src/asr/: asr.pro  qspeechrecognition.cpp  qspeechrecognition.h  qspeechrecognition_global.h  qspeechrecognition_p.h  qspeechrecognitionengine.cpp  (+20 more)
src/plugins/tts/: .prev_CMakeLists.txt  CMakeLists.txt  tts.pro
src/plugins/tts/android/jar/: CMakeLists.txt  jar.pro
src/plugins/tts/android/jar/src/org/qtproject/qt/android/speech/: QtTextToSpeech.java
src/plugins/tts/android/jar/src/org/qtproject/qt5/android/speech/: QtTextToSpeech.java
src/plugins/tts/android/src/: CMakeLists.txt  android_plugin.json  qtexttospeech_android.cpp  qtexttospeech_android.h  qtexttospeech_android_plugin.cpp  qtexttospeech_android_plugin.h
src/plugins/tts/common/: qtexttospeechprocessor.cpp  qtexttospeechprocessor_p.h
src/plugins/tts/darwin/: CMakeLists.txt  darwin_plugin.json  qtexttospeech_darwin.h  qtexttospeech_darwin.mm  qtexttospeech_darwin_plugin.cpp  qtexttospeech_darwin_plugin.h
src/plugins/tts/flite/: CMakeLists.txt  flite.pro  flite_legal.qdoc  flite_plugin.json  qtexttospeech_flite.cpp  qtexttospeech_flite.h  qtexttospeech_flite_plugin.cpp  qtexttospeech_flite_plugin.h  qtexttospeech_flite_processor.cpp  qtexttospeech_flite_processor.h  qtexttospeechengine_flite.cpp  qtexttospeechplugin_flite.cpp  qtexttospeechprocessor.cpp  qtexttospeechprocessor_p.h
src/plugins/tts/ios/: CMakeLists.txt  ios_plugin.json  qtexttospeech_ios.h  qtexttospeech_ios.mm  qtexttospeech_ios_plugin.cpp  qtexttospeech_ios_plugin.h
src/plugins/tts/macos/: CMakeLists.txt  macos_plugin.json  qtexttospeech_macos.h  qtexttospeech_macos.mm  qtexttospeech_macos_plugin.cpp  qtexttospeech_macos_plugin.h
src/plugins/tts/mock/: CMakeLists.txt  mock_plugin.json  qtexttospeech_mock.cpp  qtexttospeech_mock.h  qtexttospeech_mock_plugin.cpp  qtexttospeech_mock_plugin.h
src/plugins/tts/osx/: CMakeLists.txt  qtexttospeech_osx.h  qtexttospeech_osx.mm  qtexttospeech_osx_plugin.cpp  qtexttospeech_osx_plugin.h
src/plugins/tts/sapi/: .prev_CMakeLists.txt  CMakeLists.txt  qtexttospeech_sapi.cpp  qtexttospeech_sapi.h  qtexttospeech_sapi_plugin.cpp  qtexttospeech_sapi_plugin.h  sapi.pro  sapi_plugin.json
src/plugins/tts/speechdispatcher/: CMakeLists.txt  qtexttospeech_speechd.cpp  qtexttospeech_speechd.h  qtexttospeech_speechd_plugin.cpp  qtexttospeech_speechd_plugin.h  speechd_plugin.json  speechdispatcher.pro
src/plugins/tts/winrt/: CMakeLists.txt  qtexttospeech_winrt.cpp  qtexttospeech_winrt.h  qtexttospeech_winrt_audiosource.cpp  qtexttospeech_winrt_audiosource.h  qtexttospeech_winrt_plugin.cpp  qtexttospeech_winrt_plugin.h  winrt_plugin.json
tests/: CMakeLists.txt
tests/auto/qtexttospeech/: BLACKLIST  CMakeLists.txt  tst_qtexttospeech.cpp
tests/auto/texttospeech/: .prev_CMakeLists.txt  BLACKLIST  CMakeLists.txt  texttospeech.pro  tst_qtexttospeech.cpp
(+99 files in other folders)
