# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0

add_subdirectory(mock)
if(QT_FEATURE_speechd AND UNIX)
    add_subdirectory(speechdispatcher)
endif()
if(WIN32)
    add_subdirectory(sapi)
    if(TARGET Qt::Multimedia AND NOT MINGW)
        add_subdirectory(winrt)
    endif()
endif()
if(APPLE)
    if(MACOS AND TARGET Qt::Gui)
        add_subdirectory(macos)
    endif()
    add_subdirectory(darwin)
endif()
if(ANDROID)
    add_subdirectory(android)
endif()
if(QT_FEATURE_flite AND TARGET Qt::Multimedia)
    add_subdirectory(flite)
endif()
